--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <div>
         <p><strong>🏆 Out the Gutter</strong></p>
         <audio controls>
-            <source src="_out-the-gutter.mp3" type="audio/mpeg">
+            <source src="out-the-gutter.mp3" type="audio/mpeg">
             Your browser does not support the audio tag.
         </audio>
     </div>
