--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <img src="spotify-logo.png" alt="Spotify" style="height: 28px; vertical-align: middle; margin-left: 10px;">
 </h2>
 
-        <p>The only raccoon dropping bars AND pumping charts.</p>
+        <p><strong>Our goals are the top of the music charts and the crypto charts.</strong> BOGEY isn’t just about hype—it’s about creating a lasting brand in music, entertainment, and Web3.</p>
 <p><strong>💎 Bogey the Bandit loves wearing hard bling and spitting hard bars! 💎</strong></p>
         <a href="https://dexscreener.com/" target="_blank">
     <button id="buyNow">BUY NOW</button>
@@ -193,7 +193,7 @@
     <div>
         <p><strong>🏆 Out the Gutter</strong></p>
         <audio controls>
-            <source src="out-the-gutter.mp3" type="audio/mpeg">
+            <source src="_out-the-gutter.mp3" type="audio/mpeg">
             Your browser does not support the audio tag.
         </audio>
     </div>
@@ -229,7 +229,7 @@
     <ul>
         <li><strong>🎤 Phase 1:</strong> Launch Website, Gain First 1,000 Holders, & Go Viral with Memes.</li>
         <li><strong>🎨 Phase 2:</strong> Drop Exclusive BOGEY NFTs & Expand the Brand.</li>
-        <li><strong>🎶 Phase 3:</strong> Release the FIRST EVER Meme Coin Music Album on <strong>Spotify, Apple Music, and Amazon Music.</strong></li>
+        <li><strong>🎶 Phase 3:</strong> Top The Charts with THE FIRST EVER Meme Coin Music Album on <strong>Spotify, Apple Music, and Amazon Music.</strong></li>
 <img src="bogey-live-performance.png" alt="Bogey Performing on Stage" style="display: block; margin: 20px auto; width: 80%; max-width: 600px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
 
         <li><strong>📺 Phase 4:</strong> Premiere <strong>BOGEY’s Animated Music Video</strong> on YouTube.</li>
