--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <li><strong>🎶 Phase 3:</strong> Top The Charts with THE FIRST EVER Meme Coin Music Album on <strong>Spotify, Apple Music, and Amazon Music.</strong></li>
 <!-- Looping Video -->
 <section id="bogey-video" style="text-align: center; margin: 40px 0;">
-    <video autoplay loop muted playsinline width="80%" style="border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
+    <video autoplay loop muted playsinline style="width: 100%; max-width: 900px; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
         <source src="bogey-loop.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
