--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <ul>
         <li><strong>🎤 Phase 1:</strong> Launch Website, Gain First 1,000 Holders, & Go Viral with Memes.</li>
         <li><strong>🎨 Phase 2:</strong> Drop Exclusive BOGEY NFTs & Expand the Brand.</li>
+        <img src="bogey-live-performance.png" alt="Bogey Performing on Stage" style="display: block; margin: 20px auto; width: 80%; max-width: 600px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
         <li><strong>🎶 Phase 3:</strong> Top The Charts with THE FIRST EVER Meme Coin Music Album on <strong>Spotify, Apple Music, and Amazon Music.</strong></li>
 <!-- Looping Video -->
 <section id="bogey-video" style="text-align: center; margin: 40px 0;">
@@ -238,6 +239,7 @@
     </video>
 </section>
         <li><strong>📺 Phase 4:</strong> Premiere <strong>BOGEY’s Animated Music Video</strong> on YouTube.</li>
+        <img src="bogey-rap-video.png" alt="Bogey Recording His First Rap Video" style="display: block; margin: 20px auto; width: 80%; max-width: 600px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
         <li><strong>🤝 Phase 5:</strong> **Secure a major brand deal with Walmart** for the first-ever **BOGEY toy collection.**</li>
         <li><strong>🔥 Phase 6:</strong> Launch **exclusive BOGEY streetwear & collectibles.**</li>
         <li><strong>💰 Phase 7:</strong> Secure **Major Exchange Listings & Game-Changing Partnerships.**</li>
