--- a/index.html
+++ b/index.html
@@ -137,8 +137,6 @@
     </header>
 
     <section id="about">
-
-    <p>BOGEY the Bandit isn’t just another meme coin—he’s a <strong>legendary underground raccoon rapper</strong> breaking into <strong>crypto, music, fashion, and entertainment</strong> all at once.</p>
     <p>From <strong>spitting bars to dropping NFTs</strong>, BOGEY is here to <strong>dominate the scene</strong>—blending <strong>blockchain, hip-hop culture, and brand-building</strong> like never before.</p>
     
     <h3>Why BOGEY Stands Out</h3>
@@ -207,8 +205,6 @@
         <li><strong>🤝 Big Partnerships & Brand Deals:</strong> Expanding into <strong>mainstream entertainment, streetwear, and Web3.</strong></li>
     </ul>
     
-    <h3>BOGEY is More Than a Meme—It’s a Brand</h3>
-    <p style="font-size: 22px; font-weight: bold; color: #FFD700; text-align: center; margin-top: 20px;">
     With <strong>BOGEY the Bandit</strong>, you're not just investing in a token—<br> 
     <strong>YOU'RE INVESTING IN A BRAND.</strong>
 </p>
@@ -224,7 +220,7 @@
 </section>
 
     <section id="roadmap">
-    <h2>🚀 BOGEY'S MASTER PLAN</h2>
+    <h2>🚀 BOGEY'S ROADMAP </h2>
     <p>From underground battles to global dominance—here’s what’s next:</p>
     <ul>
         <li><strong>🎤 Phase 1:</strong> Launch Website, Gain First 1,000 Holders, & Go Viral with Memes.</li>
@@ -293,4 +289,3 @@
     </script>
 </body>
 </html>
-
