--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@
     <p>Check out some of the hottest tracks straight from the underground!</p>
     <div>
 
+    <p><strong>🔗 Off The Chain</strong></p>
+<audio controls>
+    <source src="off-the-chain.mp3" type="audio/mpeg">
+    Your browser does not support the audio tag.
+</audio>
+
     <p><strong>🔥 Late Night Drive</strong></p>
     <audio controls>
         <source src="late-night-drive.mp3" type="audio/mpeg">
