--- a/index.html
+++ b/index.html
@@ -298,8 +298,8 @@
 </html>
 
 <script>
-    // Set the launch date: February 16, 2024, at 6:00 PM CST (Converted to UTC: Feb 17, 2024, 12:00 AM)
-    const launchDate = new Date(Date.UTC(2024, 1, 17, 0, 0, 0)).getTime();
+    // Set the launch date: February 16, 2024, at 6:00 PM CST (Converted to UTC: Feb 17, 2024, 12:00 AM UTC)
+    const launchDate = new Date("Feb 16, 2024 18:00:00 CST").getTime();
 
     function updateCountdown() {
         const now = new Date().getTime();
