--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
         const timeLeft = launchDate - now;
 
         if (timeLeft <= 0) {
-            document.getElementById("countdown").innerHTML = "🚀 WE ARE LIVE!";
+            document.getElementById("countdown").innerHTML = "Pending Spotify Listing";
             return;
         }
 
