--- a/index.html
+++ b/index.html
@@ -254,9 +254,16 @@
 </section>
 
 
-    <section id="tokenomics">
-        <h2>Tokenomics</h2>
-        <canvas id="allocationChart" width="400" height="400"></canvas>
+<section id="tokenomics">
+    <h2>💰 Tokenomics</h2>
+    <p style="font-size: 20px; font-weight: bold; color: #FFD700;">🚀 100% Fair Launch – No Presale!</p>
+    <p style="font-size: 18px; color: #D3D3D3; line-height: 1.6;">
+        There will be **no presale**—everyone has an **equal chance** to buy at launch.<br>
+        The **Dev Team** will **buy in like everyone else** after launch to fund **marketing, exchange listings, and community growth.**  
+    </p>
+    <p style="font-size: 16px; font-weight: bold; color: #FFD700;">🔒 Liquidity Locked | 🚀 Contract Renounced | 📈 Community-Owned</p>
+</section>
+
     </section>
 
     <a href="https://dexscreener.com/" target="_blank" class="floating-buy">🛒 Buy BOGEY Now</a>
