--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@
     <h3>🎵 Listen to BOGEY</h3>
     <p>Check out some of the hottest tracks straight from the underground!</p>
     <div>
+        
+    <p><strong>🔥 Off The Chain</strong></p>
+    <audio controls>
+        <source src="off-the-chain.mp3" type="audio/mpeg">
+        Your browser does not support the audio tag.
+    </audio>
 
     <p><strong>🔥 Late Night Drive</strong></p>
     <audio controls>
