--- a/index.html
+++ b/index.html
@@ -274,40 +274,16 @@
 
     <a href="https://dexscreener.com/" target="_blank" class="floating-buy">🛒 Buy BOGEY Now</a>
 
+<section id="tokenomics">
+    <h2>💰 Tokenomics</h2>
+    <p style="font-size: 20px; font-weight: bold; color: #FFD700;">🚀 100% Fair Launch – No Presale!</p>
+    <p style="font-size: 18px; color: #D3D3D3; line-height: 1.6;">
+        There will be **no presale**—everyone has an **equal chance** to buy at launch.<br>
+        The **Dev Team** will **buy in like everyone else** after launch to fund **marketing, exchange listings, and community growth.**  
+    </p>
+    <p style="font-size: 16px; font-weight: bold; color: #FFD700;">🔒 Liquidity Locked | 🚀 Contract Renounced | 📈 Community-Owned</p>
+</section>
 
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const ctx = document.getElementById("allocationChart").getContext("2d");
-            new Chart(ctx, {
-                type: "doughnut",
-                data: {
-                    labels: ["Liquidity - 40%", "Marketing - 20%", "Community Rewards - 15%", "NFT & Music Fund - 10%", "Development - 10%", "Reserves - 5%"],
-                    datasets: [{
-                        label: "Token Allocation",
-                        data: [40, 20, 15, 10, 10, 5],
-                        backgroundColor: ["#FFD700", "#8B7500", "#6A0DAD", "#9400D3", "#D3D3D3", "#808080"],
-                        borderColor: "#000",
-                        borderWidth: 2
-                    }]
-                },
-                options: {
-                    responsive: true,
-                    plugins: {
-                        legend: {
-                            position: "bottom",
-                            labels: {
-                                color: "white",
-                                font: {
-                                    size: 16,
-                                    weight: "bold"
-                                }
-                            }
-                        }
-                    }
-                }
-            });
-        });
-    </script>
 </body>
 </html>
 
