--- a/index.html
+++ b/index.html
@@ -150,7 +150,14 @@
     <ul>
         <li><strong>💽 Music First:</strong> The <strong>only</strong> meme coin with full music albums on major streaming platforms.</li>
 
-<img src="bogey-rapping.png" alt="Bogey Rapping" style="display: block; margin: 20px auto; width: 80%; max-width: 500px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
+<!-- Looping Video - Bogey Rapper -->
+<section id="bogey-rapper-video" style="text-align: center; margin: 40px 0;">
+    <video autoplay loop muted playsinline 
+        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
+        <source src="Bogey-rapper.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
 
 <!-- Music Player -->
 <div style="text-align: center; margin-top: 20px;">
