--- a/index.html
+++ b/index.html
@@ -134,6 +134,18 @@
     🎵 The First Meme Coin on Spotify, Apple Music, YouTube Music & Amazon Music! 
     <img src="spotify-logo.png" alt="Spotify" style="height: 28px; vertical-align: middle; margin-left: 10px;">
 </h2>
+<!-- Streaming Platforms Section -->
+<section id="streaming-platforms" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+    <h2>🎵 Listen to Bogey on YouTube Music</h2>
+    <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
+    
+    <div style="display: flex; justify-content: center; margin-top: 20px;">
+        <!-- YouTube Music -->
+        <a href="https://music.youtube.com/watch?v=oyiCl3yZGNA&list=OLAK5uy_lKH5RyRvbmLAk8fFUH5lz-2MbhQzY8gI4" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Youtube_Music_icon.svg" alt="YouTube Music" style="width: 150px;">
+        </a>
+    </div>
+</section>
 
         <p><strong>Our goals are the top of the music charts and the crypto charts.</strong> BOGEY isn’t just about hype—it’s about creating a lasting brand in music, entertainment, and Web3.</p>
 <p><strong>💎 Bogey the Bandit loves wearing hard bling and spitting hard bars! 💎</strong></p>
