--- a/index.html
+++ b/index.html
@@ -299,15 +299,24 @@
 </section>
 
 
-<section id="tokenomics">
+<!-- Tokenomics Section -->
+<section id="tokenomics" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
     <h2>💰 Tokenomics</h2>
+    
     <p style="font-size: 20px; font-weight: bold; color: #FFD700;">🚀 100% Fair Launch – No Presale!</p>
     <p style="font-size: 18px; color: #D3D3D3; line-height: 1.6;">
         There will be **no presale**—everyone has an **equal chance** to buy at launch.<br>
         The **Dev Team** will **buy in like everyone else** after launch to fund **marketing, exchange listings, and community growth.**  
     </p>
+
+    <p style="font-size: 20px; font-weight: bold; color: #FF4500;">🔥 Built-In Burn Mechanism</p>
+    <p style="font-size: 18px; color: #D3D3D3; line-height: 1.6;">
+        All **profits from album and music sales** will be **used to buy back and burn tokens** until **25% of the total supply** has been permanently removed.  
+    </p>
+
     <p style="font-size: 16px; font-weight: bold; color: #FFD700;">🔒 Liquidity Locked | 🚀 Contract Renounced | 📈 Community-Owned</p>
 </section>
+
 
     </section>
 
