--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         const timeLeft = launchDate - now;
 
         if (timeLeft <= 0) {
-            document.getElementById("countdown").innerHTML = "Pending Spotify Listing";
+            document.getElementById("countdown").innerHTML = "🚀 WE ARE LIVE! 🎤🔥";
             return;
         }
 
