--- a/index.html
+++ b/index.html
@@ -293,6 +293,17 @@
         <li><strong>🔥 Phase 6:</strong> Launch **exclusive BOGEY streetwear & collectibles.**</li>
         <li><strong>💰 Phase 7:</strong> Secure **Major Exchange Listings & Game-Changing Partnerships.**</li>
         <li><strong>🏆 Phase 8:</strong> Expand into **esports, rap battle collaborations, and Web3 entertainment.**</li>
+        <!-- Looping Video - Bogey Award -->
+<section id="bogey-award-video" style="text-align: center; margin: 40px 0;">
+    <h2>🏆 Bogey's Big Moment</h2>
+    <p style="color: #D3D3D3; font-size: 18px;">Watch Bogey take home the award!</p>
+    <video autoplay loop muted playsinline 
+        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
+        <source src="award-bogey.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
+
         <li><strong>📺 Phase 9:</strong> **Develop and launch the full BOGEY the Bandit Animated Cartoon.**</li>
     </ul>
     <p>🚀 **This isn’t just a coin—it’s a movement.** The rap game’s first crypto icon is just getting started.</p>
