--- a/index.html
+++ b/index.html
@@ -156,6 +156,37 @@
         <a href="https://dexscreener.com/" target="_blank">
     <button id="buyNow">BUY NOW</button>
 </a>
+<header>
+    <img src="Bogey The Bandit label.png" alt="Bogey The Bandit" class="main-logo">
+    <h1>BOGEY THE BANDIT 🦝🔥</h1>
+    <p>The only raccoon dropping bars AND pumping charts.</p>
+    
+    <!-- Buy Now Button -->
+    <button id="buyNow" onclick="window.location.href='https://dexscreener.com/'">BUY NOW</button>
+
+    <!-- Official Links Section -->
+    <div id="official-links" style="margin-top: 20px; display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
+        <!-- X (Twitter) -->
+        <a href="https://t.co/WjW0GFdQkQ" target="_blank"
+            style="display: inline-flex; align-items: center; gap: 8px; text-decoration: none; 
+                   background: #1DA1F2; color: white; font-size: 16px; font-weight: bold; padding: 10px 16px; 
+                   border-radius: 8px; box-shadow: 0px 3px 8px rgba(29, 161, 242, 0.5); transition: all 0.3s ease-in-out;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/X_logo_2023_original.svg" alt="X (Twitter) Logo"
+                 style="width: 24px; height: 24px;">
+            Follow on X
+        </a>
+
+        <!-- YouTube Music -->
+        <a href="https://music.youtube.com/watch?v=oyiCl3yZGNA&list=OLAK5uy_lKH5RyRvbmLAk8fFUH5lz-2MbhQzY8gI4" target="_blank"
+            style="display: inline-flex; align-items: center; gap: 8px; text-decoration: none; 
+                   background: #FF0000; color: white; font-size: 16px; font-weight: bold; padding: 10px 16px; 
+                   border-radius: 8px; box-shadow: 0px 3px 8px rgba(255, 0, 0, 0.5); transition: all 0.3s ease-in-out;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Youtube_Music_icon.svg" alt="YouTube Music"
+                 style="width: 24px; height: 24px;">
+            Listen on YouTube Music
+        </a>
+    </div>
+</header>
 
     </header>
 
