--- a/index.html
+++ b/index.html
@@ -139,15 +139,13 @@
     <h2>🎵 Listen to Bogey on YouTube Music</h2>
     <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
 
-    <!-- YouTube Music Button -->
-    <a href="https://music.youtube.com/watch?v=oyiCl3yZGNA&list=OLAK5uy_lKH5RyRvbmLAk8fFUH5lz-2MbhQzY8gI4" target="_blank"
-        style="display: inline-flex; align-items: center; gap: 10px; text-decoration: none; 
-               background: #FF0000; color: white; font-size: 18px; font-weight: bold; padding: 12px 20px; 
-               border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.5); transition: all 0.3s ease-in-out;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Youtube_Music_icon.svg" alt="YouTube Music"
-             style="width: 30px; height: 30px;">
-        Listen on YouTube Music
-    </a>
+<!-- YouTube Music Button with Custom Image -->
+<a href="https://music.youtube.com/watch?v=oyiCl3yZGNA&list=OLAK5uy_lKH5RyRvbmLAk8fFUH5lz-2MbhQzY8gI4" target="_blank"
+    style="display: inline-block; text-decoration: none;">
+    <img src="youtube-logo.avif" alt="Listen on YouTube Music"
+         style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.5); transition: transform 0.2s ease-in-out;">
+</a>
+
 </section>
 
 
