--- a/index.html
+++ b/index.html
@@ -162,17 +162,12 @@
     <!-- Buy Now Button -->
     <button id="buyNow" onclick="window.location.href='https://dexscreener.com/'">BUY NOW</button>
 
-    <!-- Official Links Section -->
-    <div id="official-links" style="margin-top: 20px; display: flex; justify-content: center; gap: 15px; flex-wrap: wrap;">
-        <!-- X (Twitter) -->
-        <a href="https://t.co/WjW0GFdQkQ" target="_blank"
-            style="display: inline-flex; align-items: center; gap: 8px; text-decoration: none; 
-                   background: #1DA1F2; color: white; font-size: 16px; font-weight: bold; padding: 10px 16px; 
-                   border-radius: 8px; box-shadow: 0px 3px 8px rgba(29, 161, 242, 0.5); transition: all 0.3s ease-in-out;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/6/60/X_logo_2023_original.svg" alt="X (Twitter) Logo"
-                 style="width: 24px; height: 24px;">
-            Follow on X
-        </a>
+<!-- X (Twitter) Button with Custom Image -->
+<a href="https://t.co/WjW0GFdQkQ" target="_blank"
+    style="display: inline-block; text-decoration: none;">
+    <img src="x-logo.png" alt="Follow on X"
+         style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
+</a>
 
 </header>
 
