--- a/index.html
+++ b/index.html
@@ -160,14 +160,18 @@
     <p>The only raccoon dropping bars AND pumping charts.</p>
     
     <!-- Buy Now Button -->
-    <button id="buyNow" onclick="window.location.href='https://dexscreener.com/'">BUY NOW</button>
+<button id="buyNow" onclick="window.location.href='https://dexscreener.com/'">BUY NOW</button>
 
-<!-- X (Twitter) Button with Custom Image -->
-<a href="https://t.co/WjW0GFdQkQ" target="_blank"
-    style="display: inline-block; text-decoration: none;">
-    <img src="x-logo.png" alt="Follow on X"
-         style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
-</a>
+<!-- Socials Section (Now Below the Buy Button) -->
+<div style="margin-top: 20px;">
+    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
+
+    <!-- X (Twitter) Button -->
+    <a href="https://t.co/WjW0GFdQkQ" target="_blank" style="display: block; margin-top: 10px;">
+        <img src="x-logo.png" alt="Follow on X" 
+             style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
+    </a>
+</div>
 
 </header>
 
