--- a/index.html
+++ b/index.html
@@ -124,56 +124,50 @@
         <img src="Bogey The Bandit label.png" alt="Bogey The Bandit" class="main-logo">
         <h1>BOGEY THE BANDIT 🦝🔥</h1>
 
-<!-- Countdown Timer -->
-<div id="countdown-container">
-    <h2>🚀 BOGEY LAUNCH COUNTDOWN</h2>
-    <p id="countdown" class="countdown-timer">Loading...</p>
-</div>
+        <!-- Countdown Timer -->
+        <div id="countdown-container">
+            <h2>🚀 BOGEY LAUNCH COUNTDOWN</h2>
+            <p id="countdown" class="countdown-timer">Loading...</p>
+        </div>
 
-<h2 style="color: #FFD700; font-size: 28px; margin-top: 10px;">
-    🎵 The First Meme Coin on Spotify, Apple Music, YouTube Music & Amazon Music! 
-    <img src="spotify-logo.png" alt="Spotify" style="height: 28px; vertical-align: middle; margin-left: 10px;">
-</h2>
-<!-- Streaming Platforms Section -->
-<section id="streaming-platforms" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
-    <h2>🎵 Listen to Bogey on YouTube Music</h2>
-    <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
+        <!-- First Meme Coin Announcement -->
+        <h2 style="color: #FFD700; font-size: 28px; margin-top: 10px;">
+            🎵 The First Meme Coin on Spotify, Apple Music, YouTube Music & Amazon Music! 
+            <img src="spotify-logo.png" alt="Spotify" style="height: 28px; vertical-align: middle; margin-left: 10px;">
+        </h2>
 
-<!-- YouTube Music Button with Custom Image -->
-<a href="https://music.youtube.com/watch?v=oyiCl3yZGNA&list=OLAK5uy_lKH5RyRvbmLAk8fFUH5lz-2MbhQzY8gI4" target="_blank"
-    style="display: inline-block; text-decoration: none;">
-    <img src="youtube-logo.avif" alt="Listen on YouTube Music"
-         style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.5); transition: transform 0.2s ease-in-out;">
-</a>
+        <!-- Streaming Platforms Section -->
+        <section id="streaming-platforms" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+            <h2>🎵 Listen to Bogey on YouTube Music</h2>
+            <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
 
-</section>
-
+            <!-- YouTube Music Button with Custom Image -->
+            <a href="https://music.youtube.com/search?q=bogey+the+bandit" target="_blank"
+                style="display: inline-block; text-decoration: none;">
+                <img src="youtube-logo.avif" alt="Listen on YouTube Music"
+                    style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.5); transition: transform 0.2s ease-in-out;">
+            </a>
+        </section>
 
         <p><strong>Our goals are the top of the music charts and the crypto charts.</strong> BOGEY isn’t just about hype—it’s about creating a lasting brand in music, entertainment, and Web3.</p>
-<p><strong>💎 Bogey the Bandit loves wearing hard bling and spitting hard bars! 💎</strong></p>
+        <p><strong>💎 Bogey the Bandit loves wearing hard bling and spitting hard bars! 💎</strong></p>
+
+        <!-- Buy Now Button -->
         <a href="https://dexscreener.com/" target="_blank">
-    <button id="buyNow">BUY NOW</button>
-</a>
-<header>
-    <img src="Bogey The Bandit label.png" alt="Bogey The Bandit" class="main-logo">
-    <h1>BOGEY THE BANDIT 🦝🔥</h1>
-    <p>The only raccoon dropping bars AND pumping charts.</p>
-    
-    <!-- Buy Now Button -->
-<button id="buyNow" onclick="window.location.href='https://dexscreener.com/'">BUY NOW</button>
+            <button id="buyNow">BUY NOW</button>
+        </a>
 
-<!-- Socials Section (Now Below the Buy Button) -->
-<div style="margin-top: 20px;">
-    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
+        <!-- Socials Section (Now Below the Buy Button) -->
+        <div style="margin-top: 20px;">
+            <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
 
-    <!-- X (Twitter) Button -->
-    <a href="https://t.co/WjW0GFdQkQ" target="_blank" style="display: block; margin-top: 10px;">
-        <img src="x-logo.png" alt="Follow on X" 
-             style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
-    </a>
-</div>
-
-</header>
+            <!-- X (Twitter) Button -->
+            <a href="https://t.co/WjW0GFdQkQ" target="_blank" style="display: block; margin-top: 10px;">
+                <img src="x-logo.png" alt="Follow on X" 
+                    style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
+            </a>
+        </div>
+    </header>
 
     </header>
 
