--- a/index.html
+++ b/index.html
@@ -160,23 +160,25 @@
         <!-- Socials Section (Now Below the Buy Button) -->
         <div style="margin-top: 20px;">
             <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
-<!-- Official Bogey Discord Section -->
+<!-- Socials Section (Now Below the Buy Button) -->
 <div style="margin-top: 20px;">
-    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Join the Official Bogey Discord</h3>
+    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
 
-    <!-- Discord Button -->
-    <a href="https://discord.gg/SZZTxHVj" target="_blank" style="display: block; margin-top: 10px;">
-        <img src="discord-logo.png" alt="Join the Bogey Discord" 
-             style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(114, 137, 218, 0.5); transition: transform 0.2s ease-in-out;">
-    </a>
+    <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 10px;">
+        <!-- Discord Button -->
+        <a href="https://discord.gg/SZZTxHVj" target="_blank">
+            <img src="discord-logo.png" alt="Join the Bogey Discord" 
+                 style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(114, 137, 218, 0.5); transition: transform 0.2s ease-in-out;">
+        </a>
+
+        <!-- X (Twitter) Button -->
+        <a href="https://t.co/WjW0GFdQkQ" target="_blank">
+            <img src="x-logo.png" alt="Follow on X" 
+                 style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
+        </a>
+    </div>
 </div>
-            <!-- X (Twitter) Button -->
-            <a href="https://t.co/WjW0GFdQkQ" target="_blank" style="display: block; margin-top: 10px;">
-                <img src="x-logo.png" alt="Follow on X" 
-                    style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
-            </a>
-        </div>
-    </header>
+
 
     </header>
 
