--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         <p><strong>Our goals are the top of the music charts and the crypto charts.</strong> BOGEY isn’t just about hype—it’s about creating a lasting brand in music, entertainment, and Web3.</p>
         <p><strong>💎 Bogey the Bandit loves wearing hard bling and spitting hard bars! 💎</strong></p>
 
-        <!-- Socials Section (Now Below the Buy Button) -->
-        <div style="margin-top: 20px;">
-            <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
+<!-- Socials Section (Now Below the Buy Button) -->
+<div style="margin-top: 20px;">
+    <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
 
     <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 10px;">
         <!-- Discord Button -->
@@ -172,6 +172,12 @@
         <a href="https://t.co/WjW0GFdQkQ" target="_blank">
             <img src="x-logo.png" alt="Follow on X" 
                  style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
+        </a>
+
+        <!-- Telegram Button -->
+        <a href="https://t.me/+Fe4xAbqPThQzMDFk" target="_blank">
+            <img src="Telegram_2019_Logo.svg.png" alt="Join Bogey's Underground Telegram" 
+                 style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(0, 136, 204, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
     </div>
 </div>
