--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
 <!-- Tokenomics Section -->
 <section id="tokenomics">
-    <h2>🚀 Updated Tokenomics</h2>
+    <h2>🚀 Tokenomics</h2>
     
     <p><strong>At launch, 15% of the total supply will be retained by the development team strictly for marketing efforts and future exchange listings.</strong></p>
     
