--- a/index.html
+++ b/index.html
@@ -308,8 +308,10 @@
         <li><strong>🏆 Phase 8:</strong> Expand into **esports, rap battle collaborations, and Web3 entertainment.**</li>
         <!-- Looping Video - Bogey Award -->
 <section id="bogey-award-video" style="text-align: center; margin: 40px 0;">
-    <h2>🏆 Bogey's Big Moment</h2>
-    <p style="color: #D3D3D3; font-size: 18px;">Watch Bogey take home the award!</p>
+    <h2>🎤 Witness the Rise of a Legend!</h2>
+<p style="color: #D3D3D3; font-size: 18px;">
+    💎 From the underground to the spotlight—Bogey is more than just a meme, he's a movement. Watch as he claims his place among icons, proving that talent, grit, and vision can take you all the way to the top!
+</p>
     <video autoplay loop muted playsinline 
         style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
         <source src="award-bogey.mp4" type="video/mp4">
