--- a/index.html
+++ b/index.html
@@ -142,11 +142,11 @@
         </h2>
 
 <!-- Streaming Platforms Section -->
-<section id="streaming-platforms" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+<section id="streaming-platforms" style="text-align: center; margin: 40px auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px; max-width: 800px;">
     <h2>🎵 Listen to Bogey on YouTube Music</h2>
     <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
 
-    <div id="streaming-buttons" style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap;">
+    <div id="streaming-buttons" style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; margin: auto;">
         <!-- YouTube Music Button with Custom Image -->
         <a href="https://music.youtube.com/search?q=bogey+the+bandit" target="_blank"
             style="display: inline-block; text-decoration: none;">
