--- a/index.html
+++ b/index.html
@@ -282,6 +282,20 @@
     // List of image paths
     const images = [
         "images/handsup.jpg",
+        "images/14.png",
+        "images/1.png",
+        "images/2.png",
+        "images/3.png",
+        "images/4.png",
+        "images/5.png",
+        "images/6.png",
+        "images/7.png",
+        "images/8.png",
+        "images/9.png",
+        "images/10.png",
+        "images/11.png",
+        "images/12.png",
+        "images/13.png"
         "images/concert.webp",
         "images/hardbattle.webp",
         "images/jumping-crowd.webp",
