--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         "images/10.png",
         "images/11.png",
         "images/12.png",
-        "images/13.png"
+        "images/13.png",
         "images/concert.webp",
         "images/hardbattle.webp",
         "images/jumping-crowd.webp",
