--- a/index.html
+++ b/index.html
@@ -266,17 +266,29 @@
     </div>
 </div>
 
-<!-- Bogey Image Gallery Section -->
+<!-- Bogey Image Carousel -->
 <section id="bogey-gallery" style="text-align: center; margin: 50px auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
     <h2 style="color: white;">📸 Official Bogey Image Gallery</h2>
     <p style="color: #D3D3D3;">Scroll through official Bogey images!</p>
 
-    <div class="gallery-container">
-        <button class="prev" onclick="changeSlide(-1)">&#10094;</button>
-        <img id="galleryImage" src="images/handsup.jpg" alt="Bogey Image" class="gallery-img">
-        <button class="next" onclick="changeSlide(1)">&#10095;</button>
+    <div class="carousel-container">
+        <div class="carousel">
+            <img src="images/handsup.jpg" class="carousel-image" alt="Bogey Image">
+            <img src="images/concert.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/hardbattle.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/jumping-crowd.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/racks.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/redcarpet2.jpg" class="carousel-image" alt="Bogey Image">
+            <img src="images/takeover.jpg" class="carousel-image" alt="Bogey Image">
+            <img src="images/HoodLegend.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/StageBogey.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/SwoleBogey.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/Album1.jpg" class="carousel-image" alt="Bogey Image">
+            <img src="images/award.png" class="carousel-image" alt="Bogey Image">
+        </div>
     </div>
 </section>
+
 
 <script>
     // List of image paths
