--- a/index.html
+++ b/index.html
@@ -416,7 +416,29 @@
     </section>
 
     <a href="https://dexscreener.com/" target="_blank" class="floating-buy">🛒 Buy BOGEY Now</a>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        const carousel = document.querySelector(".carousel");
+        let scrollAmount = 0;
+        const imageWidth = 320; // Adjust based on image width + gap
 
+        function autoScroll() {
+            if (scrollAmount >= carousel.scrollWidth - carousel.clientWidth) {
+                scrollAmount = 0; // Reset scroll to start
+            } else {
+                scrollAmount += imageWidth; // Move to next image
+            }
+            carousel.scrollTo({
+                left: scrollAmount,
+                behavior: "smooth"
+            });
+        }
+
+        // Scroll every 3 seconds
+        setInterval(autoScroll, 3000);
+    });
+</script>
+    
 </body>
 </html>
 
