--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
     <p style="color: #D3D3D3;">Scroll through official Bogey images!</p>
 
     <div class="carousel-container">
-        <div class="carousel">
-            <img src="images/handsup.jpg" class="carousel-image" alt="Bogey Image">
+        <div class="carousel" id="bogeyCarousel">
+            <img src="images/handsup.jpg" class="carousel-image active" alt="Bogey Image">
             <img src="images/concert.webp" class="carousel-image" alt="Bogey Image">
             <img src="images/hardbattle.webp" class="carousel-image" alt="Bogey Image">
             <img src="images/jumping-crowd.webp" class="carousel-image" alt="Bogey Image">
@@ -283,60 +283,33 @@
             <img src="images/HoodLegend.webp" class="carousel-image" alt="Bogey Image">
             <img src="images/StageBogey.webp" class="carousel-image" alt="Bogey Image">
             <img src="images/SwoleBogey.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/WinningBogey.webp" class="carousel-image" alt="Bogey Image">
             <img src="images/Album1.jpg" class="carousel-image" alt="Bogey Image">
             <img src="images/award.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/Bogeywithhat.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/bogey-live-performance.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/bogey-rapping.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/bogey-rap-video.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/countingracksbogey.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/stage-performance.webp" class="carousel-image" alt="Bogey Image">
+            <img src="images/14.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/1.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/2.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/3.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/4.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/5.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/6.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/7.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/8.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/9.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/10.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/11.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/12.png" class="carousel-image" alt="Bogey Image">
+            <img src="images/13.png" class="carousel-image" alt="Bogey Image">
         </div>
     </div>
 </section>
 
-
-<script>
-    // List of image paths
-    const images = [
-        "images/handsup.jpg",
-        "images/14.png",
-        "images/1.png",
-        "images/2.png",
-        "images/3.png",
-        "images/4.png",
-        "images/5.png",
-        "images/6.png",
-        "images/7.png",
-        "images/8.png",
-        "images/9.png",
-        "images/10.png",
-        "images/11.png",
-        "images/12.png",
-        "images/13.png",
-        "images/concert.webp",
-        "images/hardbattle.webp",
-        "images/jumping-crowd.webp",
-        "images/racks.webp",
-        "images/redcarpet2.jpg",
-        "images/takeover.jpg",
-        "images/HoodLegend.webp",
-        "images/StageBogey.webp",
-        "images/SwoleBogey.webp",
-        "images/Album1.jpg",
-        "images/award.png",
-        "images/Bogeywithhat.webp",
-        "images/bogey-rap-video.png",
-        "images/countingracksbogey.webp",
-        "images/stage-performance.webp"
-    ];
-
-    let currentIndex = 0;
-
-    function changeSlide(direction) {
-        currentIndex += direction;
-        if (currentIndex < 0) {
-            currentIndex = images.length - 1;
-        } else if (currentIndex >= images.length) {
-            currentIndex = 0;
-        }
-        document.getElementById("galleryImage").src = images[currentIndex];
-    }
-</script>
 
 
     <section id="roadmap">
