--- a/index.html
+++ b/index.html
@@ -390,27 +390,38 @@
 
     <a href="https://dexscreener.com/" target="_blank" class="floating-buy">🛒 Buy BOGEY Now</a>
 <script>
-    document.addEventListener("DOMContentLoaded", function() {
-        const carousel = document.querySelector(".carousel");
-        let scrollAmount = 0;
-        const imageWidth = 320; // Adjust based on image width + gap
+    document.addEventListener("DOMContentLoaded", function () {
+        const carousel = document.getElementById("bogeyCarousel");
+        const images = document.querySelectorAll(".carousel img");
 
-        function autoScroll() {
-            if (scrollAmount >= carousel.scrollWidth - carousel.clientWidth) {
-                scrollAmount = 0; // Reset scroll to start
-            } else {
-                scrollAmount += imageWidth; // Move to next image
-            }
+        let currentIndex = 0;
+
+        function updateActiveImage() {
+            images.forEach((img, index) => {
+                img.classList.remove("active");
+                if (index === currentIndex) {
+                    img.classList.add("active");
+                }
+            });
+        }
+
+        function scrollCarousel() {
             carousel.scrollTo({
-                left: scrollAmount,
+                left: images[currentIndex].offsetLeft - (carousel.offsetWidth / 2) + (images[currentIndex].offsetWidth / 2),
                 behavior: "smooth"
             });
         }
 
-        // Scroll every 3 seconds
-        setInterval(autoScroll, 3000);
+        function autoScroll() {
+            currentIndex = (currentIndex + 1) % images.length;
+            updateActiveImage();
+            scrollCarousel();
+        }
+
+        setInterval(autoScroll, 3000); // Auto-scroll every 3 seconds
     });
 </script>
+
     
 </body>
 </html>
