--- a/index.html
+++ b/index.html
@@ -393,7 +393,6 @@
     document.addEventListener("DOMContentLoaded", function () {
         const carousel = document.getElementById("bogeyCarousel");
         const images = document.querySelectorAll(".carousel img");
-
         let currentIndex = 0;
 
         function updateActiveImage() {
@@ -403,24 +402,22 @@
                     img.classList.add("active");
                 }
             });
-        }
 
-        function scrollCarousel() {
-            carousel.scrollTo({
-                left: images[currentIndex].offsetLeft - (carousel.offsetWidth / 2) + (images[currentIndex].offsetWidth / 2),
-                behavior: "smooth"
-            });
+            // Adjust the transform instead of scrolling
+            const offset = -(currentIndex * (images[0].offsetWidth + 20));
+            carousel.style.transform = `translateX(${offset}px)`;
         }
 
         function autoScroll() {
             currentIndex = (currentIndex + 1) % images.length;
             updateActiveImage();
-            scrollCarousel();
         }
 
         setInterval(autoScroll, 3000); // Auto-scroll every 3 seconds
+        updateActiveImage(); // Call initially to set the first image as active
     });
 </script>
+
 
     
 </body>
