--- a/index.html
+++ b/index.html
@@ -317,55 +317,66 @@
     <p>From underground battles to global dominance—here’s what’s next:</p>
     <ul>
         <li><strong>🎤 Phase 1:</strong> Launch Website, Gain First 1,000 Holders, & Go Viral with Memes.</li>
-        <img src="bogey-nfts.png" alt="Bogey NFT Collection" style="display: block; margin: 20px auto; width: 80%; max-width: 500px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
+        <img src="images/bogey-nfts.png" alt="Bogey NFT Collection" style="display: block; margin: 20px auto; width: 80%; max-width: 500px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
 
-        <li><strong>🎨 Phase 2:</strong> Drop Exclusive BOGEY NFTs & Expand the Brand.</li>     
-        <section id="rapper-video" style="text-align: center; margin: 40px 0;">
-    <video autoplay loop muted playsinline 
-        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
-        <source src="Rapper-loop.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</section>
+        <li><strong>🎨 Phase 2:</strong> Drop Exclusive BOGEY NFTs & Expand the Brand.</li>
+    </ul>
+
+    <!-- Video: Rapper Loop -->
+    <section id="rapper-video" style="text-align: center; margin: 40px 0;">
+        <video autoplay loop muted playsinline style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
+            <source src="videos/Rapper-loop.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <ul>
         <li><strong>🎶 Phase 3:</strong> Top The Charts with THE FIRST EVER Meme Coin Music Album on <strong>Spotify, Apple Music, and Amazon Music.</strong></li>
-        <!-- Looping Video -->
-<section id="bogey-video" style="text-align: center; margin: 40px 0;">
-    <video autoplay loop muted playsinline 
-        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
-        <source src="bogey-loop.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</section>     
-        <li><strong>📺 Phase 4:</strong> Premiere <strong>BOGEY’s Animated Music Video</strong> on YouTube.</li>       
-        <!-- Second Looping Video -->
-<!-- Looping Video - Music Video Bogey -->
-<section id="music-video-bogey" style="text-align: center; margin: 40px 0;">
-    <h2>🎬 Bogey's Music Video</h2>
-    <video autoplay loop muted playsinline 
-        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
-        <source src="music-video-bogey.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</section>
+    </ul>
+
+    <!-- Video: Bogey Performance -->
+    <section id="bogey-video" style="text-align: center; margin: 40px 0;">
+        <video autoplay loop muted playsinline style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
+            <source src="videos/bogey-loop.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <ul>
+        <li><strong>📺 Phase 4:</strong> Premiere <strong>BOGEY’s Animated Music Video</strong> on YouTube.</li>
+    </ul>
+
+    <!-- Video: Bogey Music Video -->
+    <section id="music-video-bogey" style="text-align: center; margin: 40px 0;">
+        <h2>🎬 Bogey's Music Video</h2>
+        <video autoplay loop muted playsinline style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
+            <source src="videos/music-video-bogey.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <ul>
         <li><strong>🤝 Phase 5:</strong> Secure strategic partnerships with **top Key Opinion Leaders (KOLs)** and major advertisers to push Bogey’s brand beyond crypto and into mainstream culture. Through influencer collaborations, sponsorships, and viral marketing campaigns, we will position Bogey as **the most recognized meme coin & brand in the space.**</li>
         <li><strong>🔥 Phase 6:</strong> Launch **exclusive BOGEY streetwear & collectibles.**</li>
         <li><strong>💰 Phase 7:</strong> Secure **Major Exchange Listings & Game-Changing Partnerships.**</li>
         <li><strong>🏆 Phase 8:</strong> Expand into **esports, rap battle collaborations, and Web3 entertainment.**</li>
-        <!-- Looping Video - Bogey Award -->
-<section id="bogey-award-video" style="text-align: center; margin: 40px 0;">
-    <h2>🎤 Witness the Rise of a Legend!</h2>
-<p style="color: #D3D3D3; font-size: 18px;">
-</p>
-    <video autoplay loop muted playsinline 
-        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
-        <source src="award-bogey.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</section>
+    </ul>
 
+    <!-- Video: Bogey Award -->
+    <section id="bogey-award-video" style="text-align: center; margin: 40px 0;">
+        <h2>🎤 Witness the Rise of a Legend!</h2>
+        <p style="color: #D3D3D3; font-size: 18px;">Bogey's journey from the underground to the top is just beginning!</p>
+        <video autoplay loop muted playsinline style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
+            <source src="videos/award-bogey.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </section>
+
+    <ul>
         <li><strong>📺 Phase 9:</strong> **Develop and launch the full BOGEY the Bandit Animated Cartoon.**</li>
     </ul>
-    <p>🚀 **This isn’t just a coin—it’s a movement.** The rap game’s first crypto icon is just getting started.</p>
+
+    <p>🚀 <strong>This isn’t just a coin—it’s a movement.</strong> The rap game’s first crypto icon is just getting started.</p>
 </section>
 
 <!-- Tokenomics Section -->
