--- a/index.html
+++ b/index.html
@@ -420,6 +420,56 @@
         updateCountdown();
     });
 </script>
+<script>
+    // List of Bogey Image Paths
+    const images = [
+        "images/handsup.jpg",
+        "images/concert.webp",
+        "images/hardbattle.webp",
+        "images/jumping-crowd.webp",
+        "images/racks.webp",
+        "images/redcarpet2.jpg",
+        "images/takeover.jpg",
+        "images/HoodLegend.webp",
+        "images/StageBogey.webp",
+        "images/SwoleBogey.webp",
+        "images/WinningBogey.webp",
+        "images/Album1.jpg",
+        "images/award.png",
+        "images/Bogeywithhat.webp",
+        "images/bogey-live-performance.png",
+        "images/bogey-rapping.png",
+        "images/bogey-rap-video.png",
+        "images/countingracksbogey.webp",
+        "images/stage-performance.webp",
+        "images/14.png",
+        "images/1.png",
+        "images/2.png",
+        "images/3.png",
+        "images/4.png",
+        "images/5.png",
+        "images/6.png",
+        "images/7.png",
+        "images/8.png",
+        "images/9.png",
+        "images/10.png",
+        "images/11.png",
+        "images/12.png",
+        "images/13.png"
+    ];
+
+    let currentIndex = 0;
+
+    function changeSlide(direction) {
+        currentIndex += direction;
+        if (currentIndex < 0) {
+            currentIndex = images.length - 1;
+        } else if (currentIndex >= images.length) {
+            currentIndex = 0;
+        }
+        document.getElementById("galleryImage").src = images[currentIndex];
+    }
+</script>
 
 </body>
 </html>
