--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 </section>
 
 <script>
-    // List of image paths
+    // List of Bogey Image Paths
     const images = [
         "images/handsup.jpg",
         "images/concert.webp",
@@ -299,7 +299,21 @@
         "images/bogey-rapping.png",
         "images/bogey-rap-video.png",
         "images/countingracksbogey.webp",
-        "images/stage-performance.webp"
+        "images/stage-performance.webp",
+        "images/14.png",
+        "images/1.png",
+        "images/2.png",
+        "images/3.png",
+        "images/4.png",
+        "images/5.png",
+        "images/6.png",
+        "images/7.png",
+        "images/8.png",
+        "images/9.png",
+        "images/10.png",
+        "images/11.png",
+        "images/12.png",
+        "images/13.png"
     ];
 
     let currentIndex = 0;
@@ -314,6 +328,7 @@
         document.getElementById("galleryImage").src = images[currentIndex];
     }
 </script>
+
 
 
     <section id="roadmap">
