--- a/index.html
+++ b/index.html
@@ -142,19 +142,25 @@
         </h2>
 
 <!-- Streaming Platforms Section -->
-<section id="streaming-platforms" style="text-align: center; margin: 40px auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px; max-width: 800px;">
-    <h2>🎵 Listen to Bogey on YouTube Music</h2>
+<section id="streaming-platforms" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+    <h2>🎵 Listen to Bogey on Streaming Platforms</h2>
     <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
 
-    <div id="streaming-buttons" style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap; margin: auto;">
-        <!-- YouTube Music Button with Custom Image -->
-        <a href="https://music.youtube.com/search?q=bogey+the+bandit" target="_blank"
-            style="display: inline-block; text-decoration: none;">
+    <div id="streaming-buttons" style="display: flex; justify-content: center; align-items: center; gap: 20px; flex-wrap: wrap;">
+        <!-- YouTube Music Button -->
+        <a href="https://music.youtube.com/search?q=bogey+the+bandit" target="_blank" style="display: inline-block; text-decoration: none;">
             <img src="youtube-logo.avif" alt="Listen on YouTube Music"
                 style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 0, 0, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
+
+        <!-- Spotify Button -->
+        <a href="https://open.spotify.com/artist/7vF2a3zhQ6rC3TEm6IdmUt" target="_blank" style="display: inline-block; text-decoration: none;">
+            <img src="spotify-logo.png" alt="Listen on Spotify"
+                style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(30, 215, 96, 0.5); transition: transform 0.2s ease-in-out;">
+        </a>
     </div>
 </section>
+
 
         <p><strong>Our goals are the top of the music charts and the crypto charts.</strong> BOGEY isn’t just about hype—it’s about creating a lasting brand in music, entertainment, and Web3.</p>
         <p><strong>💎 Bogey the Bandit loves wearing hard bling and spitting hard bars! 💎</strong></p>
