--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </h2>
 
 <!-- Streaming Platforms Section -->
-<section id="streaming-platforms" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+<section id="streaming-platforms" style="text-align: center; margin: 40px auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px; width: 90%; max-width: 600px;">
     <h2>🎵 Listen to Bogey on Streaming Platforms</h2>
     <p style="color: #D3D3D3; font-size: 18px;">Bogey’s music is now available! More platforms coming soon.</p>
 
@@ -160,6 +160,7 @@
         </a>
     </div>
 </section>
+
 
 
         <p><strong>Our goals are the top of the music charts and the crypto charts.</strong> BOGEY isn’t just about hype—it’s about creating a lasting brand in music, entertainment, and Web3.</p>
