--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
 <!-- Socials Section (Now Below the Buy Button) -->
 <div style="margin-top: 20px;">
     <h3 style="color: white; font-size: 20px; margin-bottom: 10px;">Follow Bogey on Socials</h3>
+    <p style="color: #FFD700; font-size: 18px; font-weight: bold; text-align: center;">
+        👀 Talk to Bogey Himself inside Discord! <br> 🎤 **LIVE NOW - Interactive Bogey The Bandit AI!**
+    </p>
 
     <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 10px;">
         <!-- Discord Button -->
@@ -190,6 +193,7 @@
         </a>
     </div>
 </div>
+
 
 
     </header>
