--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
             <button id="buyNow">BUY NOW</button>
         </a>
         
-        <!-- Countdown Timer -->
-        <div id="countdown-container">
-            <h2>🚀 BOGEY LAUNCH COUNTDOWN</h2>
-            <p id="countdown" class="countdown-timer">Loading...</p>
-        </div>
+<!-- Coin Address Section -->
+<div id="coin-address-container" style="text-align: center; margin: 20px 0; padding: 10px; background-color: #1a1a1a; border-radius: 10px;">
+    <h2 style="color: #FFD700; font-size: 24px;">💰 Coin Address:</h2>
+    <p id="coin-address" style="font-size: 18px; color: white;">Coming Soon...</p>
+</div>
+
 
         <!-- First Meme Coin Announcement -->
         <h2 style="color: #FFD700; font-size: 28px; margin-top: 10px;">
