--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </a>
 
         <!-- X (Twitter) Button -->
-        <a href="https://t.co/WjW0GFdQkQ" target="_blank">
+        <a href="https://x.com/Bogey_TheBandit" target="_blank">
             <img src="x-logo.png" alt="Follow on X" 
                  style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
