--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                  style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(114, 137, 218, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
 
-        <!-- X (Twitter) Button -->
+        <!-- X (Twitter) Button (Fixed Link) -->
         <a href="https://x.com/Bogey_TheBandit" target="_blank">
             <img src="x-logo.png" alt="Follow on X" 
                  style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
