--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 <!-- Coin Address Section -->
 <div id="coin-address-container" style="text-align: center; margin: 20px 0; padding: 10px; background-color: #1a1a1a; border-radius: 10px;">
     <h2 style="color: #FFD700; font-size: 24px;">💰 Coin Address:</h2>
-    <p id="coin-address" style="font-size: 18px; color: white;">Coming Soon...</p>
+    <p id="coin-address" style="font-size: 18px; color: white;">4yCcLXswoYbicYLZDpTaGQWcPNUy2yNwu1MhPXNbY52u</p>
 </div>
 
 
