--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <div style="display: flex; gap: 15px; justify-content: center; align-items: center; margin-top: 10px;">
         <!-- Discord Button -->
-        <a href="https://discord.gg/SZZTxHVj" target="_blank">
+        <a href="https://discord.gg/yPs4x5H8RK" target="_blank">
             <img src="discord-logo.png" alt="Join the Bogey Discord" 
                  style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(114, 137, 218, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
