--- a/index.html
+++ b/index.html
@@ -124,10 +124,11 @@
         <img src="Bogey The Bandit label.png" alt="Bogey The Bandit" class="main-logo">
         <h1>BOGEY THE BANDIT 🦝🔥</h1>
         
-        <!-- Buy Now Button -->
-        <a href="https://dexscreener.com/" target="_blank">
-            <button id="buyNow">BUY NOW</button>
-        </a>
+<!-- Buy Now Button -->
+<a href="https://dexscreener.com/solana/fhgpmy1odxcdvcwohzt2tmhuzhswq74fyeqt9kevrkbm" target="_blank">
+    <button id="buyNow">BUY NOW</button>
+</a>
+
         
 <!-- Coin Address Section -->
 <div id="coin-address-container" style="text-align: center; margin: 20px 0; padding: 10px; background-color: #1a1a1a; border-radius: 10px;">
