--- a/index.html
+++ b/index.html
@@ -160,6 +160,13 @@
             <img src="spotify-logo.png" alt="Listen on Spotify"
                 style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(30, 215, 96, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
+                </a>
+
+        <!-- Apple Music Button -->
+        <a href="https://music.apple.com/us/artist/bogey-the-bandit/1796362044" target="_blank" style="display: inline-block; text-decoration: none;">
+            <img src="Apple_Music_icon.svg.png" alt="Listen on Apple Music"
+                style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 59, 48, 0.5); transition: transform 0.2s ease-in-out;">
+        </a>
     </div>
 </section>
 
