--- a/index.html
+++ b/index.html
@@ -358,22 +358,21 @@
 
         <li><strong>🎨 Phase 2:</strong> Drop Exclusive BOGEY NFTs & Expand the Brand.</li>   
         <!-- NFT Collection Section -->
-<section id="nft-collection" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
-    <h2>🎨 Own a Piece of Bogey - NFT Collection</h2>
+<section id="nft-collection" style="text-align: center; margin: 40px auto; padding: 30px; background-color: #1a1a1a; border-radius: 10px; max-width: 900px;">
+    <h2 style="color: white; font-size: 28px;">🎨 Own a Piece of Bogey - NFT Collection</h2>
     <p style="color: #D3D3D3; font-size: 18px;">Exclusive Bogey The Bandit NFTs available now on SolSea!</p>
 
-    <a href="https://solsea.io/c/67c4596c6448d04526d94974" target="_blank" style="display: inline-block; text-decoration: none;">
-        <img src="nft-icon.png" alt="Bogey NFT Collection on SolSea"
-            style="width: 200px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5); transition: transform 0.2s ease-in-out;">
+    <!-- NFT Image -->
+    <img src="BANDIT-001.png" alt="Bogey The Bandit NFT" 
+        style="width: 100%; max-width: 400px; border-radius: 10px; box-shadow: 0px 6px 15px rgba(255, 215, 0, 0.5); margin: 20px auto; display: block;">
+
+    <!-- NFT Buy Button -->
+    <a href="https://solsea.io/c/67c4596c6448d04526d94974" target="_blank" 
+        style="display: inline-block; padding: 12px 25px; font-size: 18px; font-weight: bold; color: white; background: #FFD700; border-radius: 8px; text-decoration: none; transition: 0.3s; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.7);">
+        🚀 View NFTs on SolSea
     </a>
 </section>
-        <section id="rapper-video" style="text-align: center; margin: 40px 0;">
-    <video autoplay loop muted playsinline 
-        style="width: 100%; max-width: 1200px; height: auto; border-radius: 10px; box-shadow: 0px 8px 20px rgba(255, 215, 0, 0.7);">
-        <source src="Rapper-loop.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-</section>
+
         <li><strong>🎶 Phase 3:</strong> Top The Charts with THE FIRST EVER Meme Coin Music Album on <strong>Spotify, Apple Music, and Amazon Music.</strong></li>
         <!-- Looping Video -->
 <section id="bogey-video" style="text-align: center; margin: 40px 0;">
